curso/Listasdos.txt
Python 3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> # range(comienzo,fin,pasos)
>>> my_range =  range(1, 5)
>>> type(my_range)
<class 'range'>
>>> for i in my_range:
...     print(i)
...
1
2
3
4
>>> my_range =  range(0, 7, 2)
>>> my_other_range = range (0, 8, 2)
>>> my _range == my_other_range
  File "<stdin>", line 1
    my _range == my_other_range
       ^^^^^^
SyntaxError: invalid syntax
>>> my _range == my_other_range
  File "<stdin>", line 1
    my _range == my_other_range
       ^^^^^^
SyntaxError: invalid syntax
>>> my_other_range
range(0, 8, 2)
>>> my_range
range(0, 7, 2)
>>> my_range == my_other_range
True
>>> for i in my_range:
...     print(i)
...
0
2
4
6
>>> for i in my_other_range:
...     print(i)
...
0
2
4
6
>>> id(my_range)
2504674266352
>>> id(my_other_range)
2504674265488
>>> my_range is my_other_range
False
>>>
 for i in range(0, 101, 2):
...     print(i)
...
0
2
4
6
8
10
12
14
16
18
20
22
24
26
28
30
32
34
36
38
40
42
44
46
48
50
52
54
56
58
60
62
64
66
68
70
72
74
76
78
80
82
84
86
88
90
92
94
96
98
100

 my_list = [1, 2, 3]
>>> my_list
[1, 2, 3]
>>> my_list(0)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'list' object is not callable
>>> my_list[0]
1
>>> my_list.appende(4)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'appende'. Did you mean: 'append'?
>>> print(my_list)
[1, 2, 3]
>>> my_list
[1, 2, 3]
>>> my_list.pop()
3
>>> for element in my_list:
...     print(element)
...
1
2
>>> a = [1, 2,3 ]
>>> b = a
>>> a
[1, 2, 3]
>>> b
[1, 2, 3]
>>> id(a)
2504674739392
>>> id(b)
2504674739392
>>> c= [a, b]
>>> c
[[1, 2, 3], [1, 2, 3]]
>>>
>>>
>>>
>>> a = [1,2,3]
>>> id(a)
2504674739456
>>> b = a
>>> id(b)
2504674739456
>>> c= list(a)
>>> a
[1, 2, 3]
>>> b
[1, 2, 3]
>>> c
[1, 2, 3]
>>> id(a)
2504674739456
>>> id(c)
2504674743680
>>> d=a[::]
>>> print(s)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 's' is not defined
>>> print(d)
[1, 2, 3]
>>> id(d)
2504674704448
>>> my_list = list(range(100))
>>> my-list
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'my' is not defined
>>> my_list
[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, 99]
>>> double = [i * 2 for i in my_list]
>>> double
[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100, 102, 104, 106, 108, 110, 112, 114, 116, 118, 120, 122, 124, 126, 128, 130, 132, 134, 136, 138, 140, 142, 144, 146, 148, 150, 152, 154, 156, 158, 160, 162, 164, 166, 168, 170, 172, 174, 176, 178, 180, 182, 184, 186, 188, 190, 192, 194, 196, 198]
>>> pares = [i for i in my_list if % 2 == 0]
  File "<stdin>", line 1
    pares = [i for i in my_list if % 2 == 0]
                                   ^
SyntaxError: invalid syntax
>>> pares = [i for i in my_list if % 2 == 0]
  File "<stdin>", line 1
    pares = [i for i in my_list if % 2 == 0]
                                   ^
SyntaxError: invalid syntax
>>> pares = [i for i in my_list if i % 2 == 0]
>>> pares
[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98]
>>>